test/parsing/issue-21710.good
issue-21710.chpl:1: In module 'my_freader':
issue-21710.chpl:5: error: fields cannot specify generic array types
